// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#parse 1`] = `
Object {
  "fonts": Array [],
  "props": Object {},
  "views": Array [
    Object {
      "children": Array [],
      "is": "Main",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 12,
          "line": 0,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
}
`;

exports[`#parse 2`] = `
Object {
  "fonts": Array [],
  "props": Object {},
  "views": Array [
    Object {
      "children": Array [
        Object {
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": undefined,
              "line": 1,
            },
            "start": Object {
              "column": 0,
              "line": 1,
            },
          },
          "name": "Text",
          "properties": Array [],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "is": "Main",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
}
`;

exports[`#parse 3`] = `
Object {
  "fonts": Array [],
  "props": Object {},
  "views": Array [
    Object {
      "children": Array [
        Object {
          "is": "Before",
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": undefined,
              "line": 1,
            },
            "start": Object {
              "column": 0,
              "line": 1,
            },
          },
          "name": "Text",
          "properties": Array [],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "children": Array [
            Object {
              "is": "ImageInside",
              "isBasic": true,
              "isGroup": false,
              "loc": Object {
                "end": Object {
                  "column": 32,
                  "line": 4,
                },
                "start": Object {
                  "column": 0,
                  "line": 3,
                },
              },
              "name": "Image",
              "properties": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 32,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 4,
                    },
                  },
                  "meta": Array [],
                  "name": "source",
                  "tags": Object {},
                  "type": "Property",
                  "value": "https://image.com/file.jpg",
                },
              ],
              "scopes": Array [],
              "type": "Block",
            },
            Object {
              "children": Array [],
              "is": "VerticalInside",
              "isBasic": true,
              "isGroup": true,
              "isList": false,
              "loc": Object {
                "end": Object {
                  "column": 0,
                  "line": 6,
                },
                "start": Object {
                  "column": 0,
                  "line": 5,
                },
              },
              "name": "Vertical",
              "properties": Array [],
              "scopes": Array [],
              "type": "Block",
            },
          ],
          "is": "Nested",
          "isBasic": true,
          "isGroup": true,
          "isList": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 7,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "Vertical",
          "properties": Array [],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "is": "After",
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 12,
            },
            "start": Object {
              "column": 0,
              "line": 8,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 9,
                },
                "start": Object {
                  "column": 0,
                  "line": 9,
                },
              },
              "meta": Array [],
              "name": "text",
              "tags": Object {},
              "type": "Property",
              "value": "after",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 11,
                  "line": 10,
                },
                "start": Object {
                  "column": 0,
                  "line": 10,
                },
              },
              "meta": Array [],
              "name": "color",
              "tags": Object {
                "style": true,
              },
              "type": "Property",
              "value": "purple",
            },
          ],
          "scopes": Array [
            Object {
              "isSystem": true,
              "properties": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 9,
                      "line": 11,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 11,
                    },
                  },
                  "meta": Array [],
                  "name": "when",
                  "tags": Object {
                    "scope": "hover",
                  },
                  "type": "Property",
                  "value": "hover",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 8,
                      "line": 12,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 12,
                    },
                  },
                  "meta": Array [],
                  "name": "color",
                  "tags": Object {
                    "style": true,
                  },
                  "type": "Property",
                  "value": "red",
                },
              ],
              "value": "hover",
            },
          ],
          "type": "Block",
        },
        Object {
          "children": Array [],
          "is": "Last",
          "isBasic": true,
          "isGroup": true,
          "isList": false,
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 14,
            },
            "start": Object {
              "column": 0,
              "line": 13,
            },
          },
          "name": "Vertical",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 14,
                },
                "start": Object {
                  "column": 0,
                  "line": 14,
                },
              },
              "meta": Array [],
              "name": "backgroundColor",
              "tags": Object {
                "style": true,
              },
              "type": "Property",
              "value": "blue",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "is": "BlueButton",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 19,
          "line": 14,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
}
`;

exports[`#parse 4`] = `
Object {
  "fonts": Array [],
  "props": Object {},
  "views": Array [
    Object {
      "children": Array [
        Object {
          "is": "A1",
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 2,
            },
            "start": Object {
              "column": 0,
              "line": 1,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 2,
                },
                "start": Object {
                  "column": 0,
                  "line": 2,
                },
              },
              "meta": Array [],
              "name": "color",
              "tags": Object {
                "style": true,
              },
              "type": "Property",
              "value": "red",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "is": "A2",
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 4,
            },
            "start": Object {
              "column": 0,
              "line": 3,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 10,
                  "line": 4,
                },
                "start": Object {
                  "column": 0,
                  "line": 4,
                },
              },
              "meta": Array [],
              "name": "color",
              "tags": Object {
                "style": true,
              },
              "type": "Property",
              "value": "white",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "is": "A",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 4,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
}
`;

exports[`#parse 5`] = `
Object {
  "fonts": Array [],
  "props": Object {
    "backgroundColor": "string",
    "marginLeft": "number",
    "name": "function",
    "onClick": "function",
    "onFocus": "function",
    "some": Object {
      "shape": Object {
        "prop": "string",
        "thing": "string",
      },
      "type": "object",
    },
    "stuff": "string",
  },
  "views": Array [
    Object {
      "children": Array [
        Object {
          "is": "Title",
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 6,
            },
            "start": Object {
              "column": 0,
              "line": 3,
            },
          },
          "maybeAnimated": true,
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 30,
                  "line": 4,
                },
                "start": Object {
                  "column": 0,
                  "line": 4,
                },
              },
              "meta": Array [
                Object {
                  "tag": "code",
                  "value": "props.some.thing",
                },
              ],
              "name": "color",
              "tags": Object {
                "code": true,
                "style": true,
              },
              "type": "Property",
              "value": "props.some.thing || 'red'",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 26,
                  "line": 5,
                },
                "start": Object {
                  "column": 0,
                  "line": 5,
                },
              },
              "meta": Array [
                Object {
                  "tag": "code",
                  "value": "props.marginLeft",
                },
              ],
              "name": "marginLeft",
              "tags": Object {
                "code": true,
                "style": true,
              },
              "type": "Property",
              "value": "props.marginLeft",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 6,
                },
                "start": Object {
                  "column": 0,
                  "line": 6,
                },
              },
              "meta": Array [
                Object {
                  "tag": "code",
                  "value": "props.some.prop",
                },
              ],
              "name": "text",
              "tags": Object {
                "code": true,
              },
              "type": "Property",
              "value": "props.some.prop",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "isBasic": true,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 20,
              "line": 8,
            },
            "start": Object {
              "column": 0,
              "line": 7,
            },
          },
          "name": "CaptureText",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 8,
                },
                "start": Object {
                  "column": 0,
                  "line": 8,
                },
              },
              "meta": Array [
                Object {
                  "tag": "code",
                  "value": "props.onFocus",
                },
              ],
              "name": "onFocus",
              "tags": Object {
                "code": true,
              },
              "type": "Property",
              "value": "props.onFocus",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "childrenProxyMap": null,
              "isBasic": false,
              "isGroup": true,
              "isList": false,
              "loc": Object {
                "end": Object {
                  "column": 4,
                  "line": 12,
                },
                "start": Object {
                  "column": 0,
                  "line": 12,
                },
              },
              "name": "Stuff",
              "properties": Array [],
              "scopes": Array [],
              "type": "Block",
            },
          ],
          "isBasic": true,
          "isGroup": true,
          "isList": true,
          "loc": Object {
            "end": Object {
              "column": 4,
              "line": 12,
            },
            "start": Object {
              "column": 0,
              "line": 9,
            },
          },
          "name": "List",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 10,
                },
                "start": Object {
                  "column": 0,
                  "line": 10,
                },
              },
              "meta": Array [
                Object {
                  "tag": "code",
                  "value": "props.stuff",
                },
              ],
              "name": "from",
              "tags": Object {
                "code": true,
              },
              "type": "Property",
              "value": "props.stuff",
            },
          ],
          "scopes": Array [
            Object {
              "isSystem": false,
              "properties": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 26,
                      "line": 11,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 11,
                    },
                  },
                  "meta": Array [
                    Object {
                      "tag": "code",
                      "value": "props.stuff.length",
                    },
                  ],
                  "name": "when",
                  "tags": Object {
                    "code": true,
                    "scope": "props.stuff.length > 0",
                  },
                  "type": "Property",
                  "value": "props.stuff.length > 0",
                },
              ],
              "value": "props.stuff.length > 0",
            },
          ],
          "type": "Block",
        },
      ],
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 4,
          "line": 12,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "maybeAnimated": true,
      "name": "Vertical",
      "properties": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 36,
              "line": 1,
            },
            "start": Object {
              "column": 0,
              "line": 1,
            },
          },
          "meta": Array [
            Object {
              "tag": "code",
              "value": "props.backgroundColor",
            },
          ],
          "name": "backgroundColor",
          "tags": Object {
            "code": true,
            "style": true,
          },
          "type": "Property",
          "value": "props.backgroundColor",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 48,
              "line": 2,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "meta": Array [
            Object {
              "tag": "code",
              "value": "props.onClick(props.name,",
            },
          ],
          "name": "onClick",
          "tags": Object {
            "code": true,
          },
          "type": "Property",
          "value": "event => props.onClick(props.name, event)",
        },
      ],
      "scopes": Array [],
      "type": "Block",
    },
  ],
}
`;
